max width 100% added to rows and game board and overflow issues fixed

--- a/style.css
+++ b/style.css
@@ -18,30 +18,19 @@ body{
    background: #d9a7c7;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #fffcdc, #d9a7c7);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #fffcdc, #d9a7c7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+overflow:hidden;
 
 }
 
-.title{
-    text-align:center;
+.row{
+    max-width:100%;
+    
 }
 
 
-.game-menu{
-    text-align:center;
-    font-size:300%;
-}
-#game-menu-header{
-    font-size:80px;
-    height:25vh;
-}
-.game-menu-buttons{
-    font-size:100%;
-}
 
 /*main game page*/
-.game-info{
 
-}
 
 .moves-made{
     text-align:center;
@@ -76,6 +65,11 @@ background: linear-gradient(to right, #fffcdc, #d9a7c7); /* W3C, IE 10+/ Edge, F
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    padding-bottom:20px;
+    overflow:hidden;
+        max-width:100%;
+
+
 
 }
 
@@ -96,7 +90,7 @@ background: linear-gradient(to right, #fffcdc, #d9a7c7); /* W3C, IE 10+/ Edge, F
 
 
 .game-card {
-    overflow: hidden;
+    overflow: none;
     padding: 0;
     border: black;
     border-radius: .28571429rem;
@@ -119,75 +113,7 @@ background: linear-gradient(to right, #fffcdc, #d9a7c7); /* W3C, IE 10+/ Edge, F
 }
 
 
-#overlay{
-    position:fixed;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background: rgba(0,0,0,.9);
-    overflow-x:hidden;
-    z-index:5;
-}
 
-#overlay-text{
-    color:white;
-}
-
-
-.scale-in-left {
-    -webkit-animation: scale-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-    animation: scale-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-}
-
-/* ----------------------------------------------
- * Generated by Animista on 2020-1-7 15:26:58
- * Licensed under FreeBSD License.
- * See http://animista.net/license for more info.
- * w: http://animista.net, t: @cssanimista
- * ---------------------------------------------- */
-
-/**
- * ----------------------------------------
- * animation scale-in-left
- * ----------------------------------------
- */
-@-webkit-keyframes scale-in-left {
-    0% {
-        -webkit-transform: scale(0);
-        transform: scale(0);
-        -webkit-transform-origin: 0% 50%;
-        transform-origin: 0% 50%;
-        opacity: 1;
-    }
-    100% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        -webkit-transform-origin: 0% 50%;
-        transform-origin: 0% 50%;
-        opacity: 1;
-    }
-}
-@keyframes scale-in-left {
-    0% {
-        -webkit-transform: scale(0);
-        transform: scale(0);
-        -webkit-transform-origin: 0% 50%;
-        transform-origin: 0% 50%;
-        opacity: 1;
-    }
-    100% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        -webkit-transform-origin: 0% 50%;
-        transform-origin: 0% 50%;
-        opacity: 1;
-    }
-}
-
-
-
-//
 
 
 
